postfix/manifests/postfix-deployment-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postfix

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  namespace: postfix
  labels:
    app: postfix
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postfix
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: postfix
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: postfix
        image: boky/postfix:4.4.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Gi"
        ports:
        - name: smtp
          containerPort: 587

---
apiVersion: v1
kind: Service
metadata:
  name: postfix
  namespace: postfix
spec:
  selector:
    app: postfix
  type: ClusterIP
  ports:
  - name: smtp
    port: 587
    targetPort: 587
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postfix
  namespace: postfix
spec:
  entryPoints:
    - mail-tcp
  routes:
  - match: HostSNI(`*`)
    services:
    - name: postfix
      port: 587
